--- a/start.html
+++ b/start.html
@@ -108,7 +108,7 @@
             <img src="c2.jpg" alt="Delicious Indian Dish 3">
         </div>
 
-        <a href="loginn.html" class="login-button">Create Account</a>
+        <a href="loginn.html" class="login-button">Sign Up</a>
     </div>
     <footer>
         &copy; 2024 Flavour Delights. All rights reserved.
